--- a/README.Rmd
+++ b/README.Rmd
@@ -5,7 +5,7 @@ always_allow_html: true
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-[![Zenodo-repository](https://img.shields.io/badge/Data-10.5281/zenodo.12654376-darkred)](https://zenodo.org/records/12654377)
+[![Zenodo-repository](https://img.shields.io/badge/Data-10.5281/zenodo.12654376-darkred)](https://zenodo.org/doi/10.5281/zenodo.12654376)
 [![Website - pkgdown](https://img.shields.io/badge/data-visulaization-blue)](https://tillrose.github.io/BRIWECS_Data_Publication/data_overview.html) [![Project-website](https://img.shields.io/badge/Project-website-darkgreen)](https://www.igps.uni-hannover.de/de/forschung/forschungsprojekte/detailansicht/projects/forschungsverbund-briwecs)
 
 ![Breeding Innovations in Wheat for Efficient Cropping Systems (BRIWECS).](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/BRIWECS_logo.png){fig-align="right"}
@@ -31,7 +31,9 @@ options(dplyr.summarise.inform = FALSE)
 
 1.  open `Scientific_Data_Analysis.RProject`
 2.  open `scripts/run.R`
-3.  run all `Ctrl + Alt + R` 
+3.  run all `Ctrl + Alt + R`
+
+***in case of data update, please visit https://zenodo.org/doi/10.5281/zenodo.12654376 and replace the file in folder data***
 
 ## directory tree
 
