--- a/README.Rmd
+++ b/README.Rmd
@@ -5,12 +5,11 @@ always_allow_html: true
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-[![Figshare-repository](https://img.shields.io/badge/doi-10.6084/m9.figshare.27910269-darkred)](https://figshare.com/s/6182dd7384bef2dbd9d5)
-[![Website - pkgdown](https://img.shields.io/badge/data-visulaization-blue)](https://tillrose.github.io/BRIWECS_Data_Publication/data_overview.html) [![Project-website](https://img.shields.io/badge/Project-website-darkgreen)](https://www.igps.uni-hannover.de/de/forschung/forschungsprojekte/detailansicht/projects/forschungsverbund-briwecs)
+[![Paper-publication](https://img.shields.io/badge/Scientific-Data-darkred)](https://www.nature.com/articles/s41597-024-04332-7) [![Figshare-repository](https://img.shields.io/badge/Figshare-10.6084/m9.figshare.27910269-yellow)](https://figshare.com/s/6182dd7384bef2dbd9d5) [![Website - pkgdown](https://img.shields.io/badge/data-visulaization-blue)](https://tillrose.github.io/BRIWECS_Data_Publication/data_overview.html) [![Project-website](https://img.shields.io/badge/Project-website-darkgreen)](https://www.igps.uni-hannover.de/de/forschung/forschungsprojekte/detailansicht/projects/forschungsverbund-briwecs)
 
 ![Breeding Innovations in Wheat for Efficient Cropping Systems (BRIWECS).](https://github.com/tillrose/BRIWECS_Data_Publication/blob/main/figure/BRIWECS_logo.png){fig-align="right"}
 
-
+# [Multi-environment field trials for wheat yield, stability and breeding progress in Germany](https://www.nature.com/articles/s41597-024-04332-7)
 
 <!-- [![License: GPL-3](https://img.shields.io/badge/License-GPL3-orange)](https://www.r-project.org/Licenses/) -->
 
@@ -26,8 +25,7 @@ suppressWarnings(library(ggraph))
 options(dplyr.summarise.inform = FALSE)
 ```
 
-
-## insturctution
+## instruction
 
 1.  open `Scientific_Data_Analysis.RProject`
 2.  open `scripts/run.R`
